--- a/firstportfolio/templates/index.html
+++ b/firstportfolio/templates/index.html
@@ -66,10 +66,10 @@
     <main role="main">
         <section class="jumbotron text-center">
             <div class="container">
-                <h1 class="jumbotron-heading">Album example</h1>
-                <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+                <h1 class="jumbotron-heading">图像展示</h1>
+                <p class="lead text-muted">相册(Photo album)又称影集或照片集，是用来装放相片的物品，相册主要用来收藏和保护相片使用。相册的材料有多种，通常相册由纸壳和PVC插袋制作而成，相册的表面通常为精美的图样设计，如山水风景、明星肖像等。</p>
                 <p>
-                    <a href="#" class="btn btn-primary my-2">Main call to action</a>
+                    <a href="blog/" class="btn btn-primary my-2">我的博客</a>
                     <a href="#" class="btn btn-secondary my-2">Secondary action</a>
                 </p>
             </div>
