--- a/firstportfolio/blog/templates/blog_page1.html
+++ b/firstportfolio/blog/templates/blog_page1.html
@@ -7,30 +7,30 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.5">
-    <title>My Blogs</title>
+    <title>Blog</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style>
-    .bd-placeholder-img {
+        .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
         -webkit-user-select: none;
         -moz-user-select: none;
         -ms-user-select: none;
         user-select: none;
-    }
+      }
 
-    pre {
-        white-space: pre-wrap;
-        word-wrap: break-word;
-    }
+      pre{
+      	white-space: pre-wrap;
+      	word-wrap: break-word;
+      }
 
-    @media (min-width: 768px) {
+      @media (min-width: 768px) {
         .bd-placeholder-img-lg {
-            font-size: 3.5rem;
+          font-size: 3.5rem;
         }
-    }
+      }
     </style>
 </head>
 
@@ -42,7 +42,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="mr-2" viewBox="0 0 24 24" focusable="false">
                         <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z" />
                         <circle cx="12" cy="13" r="4" /></svg>
-                    <strong>Blogs</strong>
+                    <strong>Blog</strong>
                 </a>
             </div>
         </div>
@@ -50,24 +50,18 @@
     <main role="main">
         <section class="jumbotron text-center">
             <div class="container">
-                <h1 class="jumbotron-heading">我的博客</h1>
-                <p class="lead text-muted">博客，仅音译，英文名为Blogger，为Web Log的混成词。它的正式名称为网络日记；又音译为部落格或部落阁等，是使用特定的软件，在网络上出版、发表和张贴个人文章的人，或者是一种通常由个人管理、不定期张贴新的文章的网站。</p>
-                <p>
-                    <a href=".." class="btn btn-primary my-2">回到主页</a>
+                <h1 class="jumbotron-heading">{{ blog.title }}</h1>
+                <a href=".." class="btn btn-primary my-2">回到主页</a>
                 </p>
             </div>
         </section>
         <div align="center">
-            {% for blog in blogs.all %}
-            <h2><a href="{{ blog.id }}">{{ blog.title }}</a></h2>
             <br>
             {{ blog.date }}
             <br>
             <img src="{{  blog.image.url  }}" height="230" width="400">
             <br>
-            <pre style="width:650px">{{ blog.shorttext }}</pre>
-            <br><br>
-            {% endfor %}
+            <pre style="width:600px">{{ blog.text }}</pre>
         </div>
     </main>
     <footer class="text-muted">
@@ -75,8 +69,6 @@
             <p class="float-right">
                 <a href="#">Back to top</a>
             </p>
-            <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-            <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a href="/docs/4.3/getting-started/introduction/">getting started guide</a>.</p>
         </div>
     </footer>
 </body>
